# markdown-it-py

./: .coveragerc  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  codecov.yml  index.html  package.json  profiler.py  pyproject.toml  setup.cfg  setup.py  tox.ini  try_running_renderer.py
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  enhancement.yml
.github/ISSUE_TEMPLATE/IRadvisor/: Adil-Ishaq-yml
.github/workflows/: benchmark.yml  copilot-setup-steps.yml  fuzz.yml  tests.yml
benchmark_samples/: block-fences.md  block-html.md  block-list-flat.md  inline-escape.md  inline-newlines.md
benchmarking/: bench_core.py  bench_packages.py  bench_plugins.py  conftest.py
benchmarking/samples/: block-bq-flat.md  block-code.md  block-hr.md  block-list-nested.md  inline-em-nested.md  inline-links-flat.md  rawtabs.md
dev/bench/: benchmark.css  config.js  data.js  funcs.js  index.html  main.js
docs/: Makefile  README.md  Using_the_api.md  architecture.md  conf.py  contributing.md  development.md  index.md  other.md  performance.md  plugins.md  requirements.txt  security.md  using.md
docs/_static/: custom.css
markdown_it/: __init__.py  _compat.py  _doc_renderer.py  _shtab.py  doc_renderer.py  main.py  normalize_url.py  parser_block.py  parser_core.py  parser_inline.py  port.yaml  renderer.py  ruler.py  token.py  tree.py  utils.py
markdown_it/cli/: benchmark.py  parse.py
markdown_it/common/: entities.py  html_blocks.py  html_re.py  normalize_url.py  utils.py
markdown_it/extensions/: amsmath.py  anchors.py  colon_fence.py  container.py  deflist.py  dollarmath.py  footnote.py  front_matter.py  myst_blocks.py  myst_role.py  tasklists.py  texmath.py
markdown_it/extensions/amsmath/: __init__.py
markdown_it/extensions/anchors/: __init__.py  index.py
markdown_it/extensions/container/: __init__.py  index.py
markdown_it/extensions/deflist/: __init__.py  index.py
markdown_it/extensions/dollarmath/: __init__.py  index.py
markdown_it/extensions/footnote/: __init__.py  index.py
markdown_it/extensions/front_matter/: __init__.py  index.py
markdown_it/extensions/myst_blocks/: __init__.py  index.py
markdown_it/extensions/myst_role/: __init__.py  index.py
markdown_it/extensions/tasklists/: __init__.py  port.yaml
markdown_it/extensions/texmath/: __init__.py  index.py  port.yaml
markdown_it/extra/: __init__.py  linkify_it.py
markdown_it/helpers/: __init__.py  parse_link_destination.py  parse_link_label.py  parse_link_title.py
markdown_it/myst/: doc_renderer.py  mocking.py  renderer.py  sphinx_renderer.py
markdown_it/presets/: __init__.py  commonmark.py  default.py  working.py  zero.py
markdown_it/rules_block/: __init__.py  blockquote.py  code.py  fence.py  heading.py  hr.py  html_block.py  lheading.py  list.py  paragraph.py  reference.py  state_block.py  table.py
markdown_it/rules_core/: __init__.py  block.py  inline.py  linkify.py  normalize.py  replacements.py  smartquotes.py  state_core.py  text_join.py
markdown_it/rules_inline/: __init__.py  autolink.py  backticks.py  balance_pairs.py  emphasis.py  entity.py  escape.py  html_inline.py  image.py  link.py  linkify.py  newline.py  state_inline.py  strikethrough.py  text.py  text_collapse.py
scripts/: build_fuzzers.py  profiler.py
tests/: test_cli.py  test_fuzzer.py  test_linkify.py  test_syntax_tree_node.py  test_tree.py
tests/fuzz/: README.md  fuzz_markdown.py  fuzz_markdown_extended.py
tests/test_amsmath/: test_amsmath.py
tests/test_amsmath/test_amsmath/: test_plugin_parse.yml
tests/test_api/: test_main.py  test_make_fence_rule.py  test_plugin_creation.py  test_token.py
tests/test_api/test_main/: test_table_tokens.yml
tests/test_cmark_spec/: get_cmark_spec.py  spec.sh  test_spec.py
tests/test_cmark_spec/test_spec/: test_file.html
tests/test_container/: fixtures.md  test_container.py  test_fixtures.py
tests/test_deflist/: test_deflist.py  test_fixtures.py
tests/test_deflist/test_deflist/: test_plugin_parse.yml
tests/test_footnote/: fixtures.md  test_fixtures.py  test_footnote.py
tests/test_front_matter/: test_fixtures.py
tests/test_math/: fixtures_bracket.md  fixtures_dollar.md  test_fixtures.json  test_math.py
tests/test_math/test_math/: 0_True_single characte.yml  10_True_exponentiation.yml  11_True_conjugate compl.yml  12_True_single block eq.yml  13_True_display equatio.yml  14_True_inline equation.yml  15_True_underline tests.yml  16_True_non-numeric cha.yml  17_True_following dolla.yml  18_True_consecutive inl.yml  19_True_inline equation.yml  1_True_inline equation.yml  20_True_display equatio.yml  21_True_multiline equat.yml  22_True_vector equation.yml  23_True_display equatio.yml  24_True_inline equation.yml  25_True_equation follow.yml  26_True_numbered equati.yml  27_True_Equations in li.yml  28_True_Inline sum..yml  29_True_Sum without equ.yml  2_True_simple equation.yml  30_True_Sum with equati.yml  31_True_equation number.yml  32_True_inline equation.yml  33_True_display equatio.yml  34_True_escaped dollars.yml  35_False_empty line betw.yml  36_False_whitespace char.yml  37_False_line break in i.yml  3_True_simple equation.yml  4_True_equation includ.yml  5_True_use of currency.yml  6_True_use of currency.yml  7_True_inline fraction.yml  8_True_inline column v.yml  9_True_inline bold vec.yml  test_plugin_parse.yml
tests/test_myst_block/: fixtures.md  test_fixtures.py
tests/test_myst_role/: test_fixtures.py  test_role.py
tests/test_plugins/: test_amsmath.py  test_anchors.py  test_colon_fence.py  test_container.py  test_deflist.py  test_dollarmath.py  test_footnote.py  test_front_matter.py  test_math.py  test_myst_block.py  test_myst_role.py  test_tasklists.py  test_texmath.py
tests/test_plugins/fixtures/: amsmath.md  anchors.md  colon_fence.md  (+7 more)
tests/test_port/: test_fixtures.py  test_misc.py  test_no_end_newline.py  test_references.py
tests/test_tree/: test_pretty.xml  test_pretty_text_special.xml
(+23 files in other folders)
