[metadata]
name = markdown_it_py
version = attr: markdown_it.__version__
description = Python port of markdown-it. Markdown parsing, done right!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/executablebooks/markdown-it-py
author = Chris Sewell
author_email = chrisj_sewell@hotmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup
keywords = markdown lexer parser development
project_urls =
    Documentation=https://markdown-it-py.readthedocs.io

[options]
packages = find:
install_requires =
    attrs>=19,<21
    mdit-py-plugins~=0.2.6
python_requires = ~=3.6
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    markdown-it = markdown_it.cli.parse:main

[options.extras_require]
code_style =
    pre-commit==2.6
compare =
    commonmark~=0.9.1
    markdown~=3.2.2
    mistletoe-ebp~=0.10.0
    mistune~=0.8.4
    panflute~=1.12
linkify =
    linkify-it-py~=1.0
rtd =
    myst-nb~=0.11.1
    pyyaml
    sphinx>=2,<4
    sphinx-copybutton
    sphinx-panels~=0.4.0
    sphinx_book_theme
testing =
    coverage
    psutil
    pytest>=3.6,<4
    pytest-benchmark~=3.2
    pytest-cov
    pytest-regressions

[options.packages.find]
exclude =
    test*
    benchmarking

[mypy]
show_error_codes = True
warn_unused_ignores = True
warn_redundant_casts = True
no_implicit_optional = True
strict_equality = True

[mypy-tests.test_plugins.*]
ignore_errors = True

[flake8]
max-line-length = 100
extend-ignore = E203
